フォルダ分け

--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>タイトル</title>
     <meta name="description" content="ページの説明文">
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <div id="navi">
+    <nav>
       <div id="toplogo"></div>
       <ul id="menu">
         <li class="item">メニュー1<a href=""></a></li>
         <li class="item">メニュー2<a href=""></a></li>
-        <li class="item">メニュー3<a href=""></a></li>
-        <li class="item">メニュー4<a href=""></a></li>
       </ul>
-    </div>
-    <div id="conterntcontainer">
-      <div id="content">
+    </nav>
+    <section>
         <h1>サイト名</h1>
         <p>～なページです。</p>
         <h2>コンテンツ</h2>
         <p>学習1</p>
-      </div>
+    </section>
+    <footer>
+      <p>Copyright 2022</p>
+    </footer>
   </body>
 </html>
