TOPページ作成

--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
     <nav>
       <div id="toplogo"></div>
       <ul id="menu">
-        <li class="item">メニュー1<a href=""></a></li>
-        <li class="item">メニュー2<a href=""></a></li>
+        <li class="item">PROFILE<a href=""></a></li>
+        <li class="item">INFO<a href=""></a></li>
+        <li class="item">WORK<a href=""></a></li>
+        <li class="item">LINK<a href=""></a></li>
       </ul>
     </nav>
     <section>
-        <h1>サイト名</h1>
-        <p>～なページです。</p>
+        <h1>MoegiAki</h1>
+        <div id="topImg"></div>
         <h2>コンテンツ</h2>
         <p>学習1</p>
     </section>
     <footer>
-      <p>Copyright 2022</p>
+      <p>Copyright 2022 MoegiAki</p>
     </footer>
   </body>
 </html>
