メニュー修正

--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
     <nav>
       <div id="toplogo"></div>
       <ul id="menu">
-        <li class="item">PROFILE<a href=""></a></li>
-        <li class="item">INFO<a href=""></a></li>
-        <li class="item">WORK<a href=""></a></li>
-        <li class="item">LINK<a href=""></a></li>
+        <li class="item sub_profile">PROFILE<a href=""></a></li>
+        <li class="item sub_info">INFO<a href=""></a></li>
+        <li class="item sub_work">WORK<a href=""></a></li>
+        <li class="item sub_link">LINK<a href=""></a></li>
       </ul>
     </nav>
     <section>
         <h1>MoegiAki</h1>
         <div id="topImg"></div>
-        <h2>コンテンツ</h2>
-        <p>学習1</p>
+        <h2>学習</h2>
+        <p>日々の学びのメモ</p>
+        <h2>趣味</h2>
+        <p>イラスト等、生き甲斐の倉庫</p>
     </section>
     <footer>
       <p>Copyright 2022 MoegiAki</p>
