サブページ作成

--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
       </ul>
     </nav>
     <section>
-        <h1>MoegiAki</h1>
-        <div id="topImg"></div>
-        <h2>学習</h2>
-        <p>日々の学びのメモ</p>
-        <h2>趣味</h2>
-        <p>イラスト等、生き甲斐の倉庫</p>
+      <h1>MoegiAki</h1>
+      <div id="topImg"></div>
+      <div class="container">
+        <div class="subItem">
+          <h2>学習</h2>
+          <p>日々の学びのメモ</p>
+        </div>
+        <div class="subItem">
+          <h2>趣味</h2>
+          <p>イラスト等、生き甲斐の倉庫</p>
+        </div>
+      </div>
     </section>
     <footer>
       <p>Copyright 2022 MoegiAki</p>
