--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="subItem">
           <h2>趣味</h2>
-          <p>イラスト等、生き甲斐の倉庫</p>
+          <p>イラスト倉庫</p>
         </div>
       </div>
     </section>
