--- a/subPage/illust/index.html
+++ b/subPage/illust/index.html
@@ -3,15 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>タイトル</title>
-    <meta name="description" content="ページの説明文">
-    <link rel="stylesheet" href="./styles.css">
-    <!-- [if lt IE 9] -->
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
-    <!-- [endif] -->
+    <title>イラスト</title>
+    <meta name="description" content="イラスト倉庫">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-
+    <div class="container">
+      <div class="item item01">
+        <img src="./img/img_01.png" alt="">
+      </div>
+      <div class="item item02">
+        <img src="./img/img_01.png" alt="">
+      </div>
+      <div class="item item03">
+        <img src="./img/img_01.png" alt="">
+      </div>
+      <div class="item item04">
+        <img src="./img/img_01.png" alt="">
+      </div>
+    </div><!-- .container -->
   </body>
 </html>
