学びラボプチ講座準備
スタイル修正。フォント、余白位置、画像追加

--- a/manabiLAB/index.html
+++ b/manabiLAB/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>もえぎのじこしょうかいサイト</title>
+  <title>じこしょうかいサイト</title>
   <meta name="description" content="ページの説明文">
   <link rel="stylesheet" href="./style.css">
 
@@ -14,7 +15,7 @@
   <section class="layout">
     <div class="header">
       <h1>パイソンで<br>ウェブサイトを作ろう！</h1>
-      <img src="https://moegiaki.com/manabiLAB/img/lablogo_new_a.png" height="200px">
+      <img src="https://moegiaki.com/manabiLAB/img/lablogo_new_a.png" height="250px">
     </div>
     <div class="leftSide"></div>
     <div class="body">
@@ -48,7 +49,7 @@
     </div>
     <div class="rightSide"></div>
     <div class="footer">
-      <h3><a href="https://note.com/zero_blender_/n/ne43b03c15351" target="_blank">学びラボ</a></h3>
+      <h3><a href="https://manabilab.or.jp/" target="_blank"><img src="https://moegiaki.com/manabiLAB/img/logo_yoko.png" alt="学びラボ" width="320"></a></h3>
     </div>
   </section>
 </body>
